--- a/app/scss/_weathericons.scss
+++ b/app/scss/_weathericons.scss
@@ -1,31 +1,22 @@
-i {
-  // font-size: 1.5rem;
-  // padding: .5rem;
-}
-
 .current-temp__icon-container i {
-  // border: 2px solid rgb(255, 255, 255);
-  font-size: 6rem;
-  // padding: 1rem;
+  font-size: 5rem;
+  padding: 1.5rem 0rem;
 }
 
 .next-3-days-forecast__icon_container i {
-  // border: 2px solid yellow;
   font-size: 3rem;
-  // padding: 1rem;
 }
 
 // Tablet/Desktop only
 
 .hourly-forecast__icon_container i {
-  // border: 2px solid rgb(183, 0, 255);
-  font-size: 3rem;
-  // margin: .5rem 0;
-  // padding: 1rem;
+  font-size: 2.5rem;
+  // padding: 1rem 0rem; might come back to this
+  padding: .5rem;
 }
 
 .next-5-days-forecast__icon_container i {
-  // border: 2px solid blue;
-  font-size: 2rem;
-  // padding: 1rem;
+  // font-size: 2rem; might come back to this
+  font-size: 1.5rem;
+  padding: .5rem;
 }
